--- a/ThinkSharp.Solutions/ServiceFromTemplate/GenerateSolutionFromTemplateView.xaml
+++ b/ThinkSharp.Solutions/ServiceFromTemplate/GenerateSolutionFromTemplateView.xaml
@@ -7,7 +7,7 @@
              xmlns:CloneRepository="clr-namespace:ThinkSharp.Solutions.ServiceFromTemplate.CloneRepository"
              xmlns:PlaceholderReplacement="clr-namespace:ThinkSharp.Solutions.ServiceFromTemplate.PlaceholderReplacement"
              mc:Ignorable="d"
-             Height="300" Width="600"
+             MinHeight="300" MinWidth="600"
              Name="MyToolWindow">
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
